# CopterSwarm

./: CMakeLists.txt  README.md  nix_env_server.cc  test_v1.cc  test_v2.cc  test_v3.cc  test_v4.cc  win32_env_server.cc  win32_env_server_test_client.cc  win32_environment_server.cc  win32_environment_server_test_client.cc
CopterLib/: CMakeLists.txt  CommonStructs.h  Copter.cc  Copter.h  EnergySource.cc  EnergySource.h  Environment.cc  Environment.h  Motor.cc  Motor.h  Rotor.cc  Rotor.h  Serializable.h  Utilities.cc  Utilities.h
HiveEngine/: CMakeLists.txt  CommonStructs.cc  CommonStructs.h  Entity.cc  Entity.h  Entity_Deprecated.cc  Entity_Deprecated.h  PerlinNoise.cpp  PerlinNoise.h  PhysicalNode.cc  PhysicalNode.h  TriangleDescriptor.cc  TriangleDescriptor.h  Utilities.cc  Utilities.h  mesh.cc  mesh.h
HiveEngineRenderer/: CMakeLists.txt  Camera.cc  Camera.h  GLHandler.cc  GLHandler.h  LineRenderer.cc  LineRenderer.h  ShaderLoader.cc  ShaderLoader.h  ShaderProgram.cc  ShaderProgram.h  TextRenderer.cc  TextRenderer.h  file_loader.cc  file_loader.h  mesh_renderer.cc  mesh_renderer.h  opengl_settings.h
HiveEngineRenderer/GL_CODE/: consolas.csv  line.fs  line.vs  mesh.fs  mesh.vs  model.fs  model.vs  text.fs
HiveEngineRenderer/KHR/: khrplatform.h
HiveEngineRenderer/glad/: glad.c  glad.h
glfw/docs/html/: annotated.html  bug.html  build_8dox.html  build_guide.html  classes.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  dir_1f12d41534b9d9c99a183e145b58d6f3.html  dir_351f617146de9499414a6c099ebbe0ca.html  dir_4bcf8e981abe5adb811ce4f57d70c9af.html  files.html  functions.html  functions_vars.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_defs_b.html  globals_defs_c.html  globals_defs_d.html  globals_defs_e.html  globals_defs_f.html  globals_defs_g.html  globals_defs_h.html  globals_defs_i.html  globals_defs_j.html  globals_defs_k.html  globals_defs_l.html  globals_defs_m.html  globals_defs_n.html  globals_defs_o.html  (+60 more)
glfw/docs/html/search/: all_0.js  all_1.js  all_3.js  all_5.js  all_8.js  all_d.js  all_e.js  all_f.js  defines_0.html  defines_0.js  files_0.html  files_1.html  files_2.html  files_3.html  files_4.html  files_5.html  files_6.html  files_7.html  files_7.js  files_8.html  functions_0.js  groups_0.js  groups_2.js  groups_5.html  groups_5.js  groups_6.html  groups_7.html  groups_8.html  groups_8.js  groups_9.html  groups_9.js  pages_0.js  pages_1.html  pages_1.js  pages_2.html  pages_2.js  pages_3.html  pages_3.js  pages_4.html  pages_4.js  (+9 more)
glm/detail/: type_int.hpp
python3-libs/: CopterLib.py  test.py
